# ble_hand_controller-

./: .gitignore  .gitmodules  ble_spp_client.code-workspace
ble_spp_client/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.old
ble_spp_client/main/: CMakeLists.txt  adc.c  adc.h  ble_spp_client.c  ble_spp_client.h  button.c  button.h  hw_config.c  hw_config.h  idf_component.yml  lcd.c  lcd.h  lv_conf.h  main.c  main.h  menu.c  menu.h  sleep.c  sleep.h  spp_client_demo.c  ui_updater.c  ui_updater.h  vesc_config.c  viber.c  viber.h
ble_spp_client/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
ble_spp_client/main/ui/fonts/: ui_font_bebas20.c
ble_spp_client/main/ui/images/: ui_img_106406083.c  ui_img_177279753.c  ui_img_2113635023.c  ui_img_33_connection_png.c  ui_img_38597039.c  ui_img_480528337.c  ui_img_66_connection_png.c  ui_img_battery101_png.c  ui_img_battery_0_png.c  ui_img_battery_100_png.c  ui_img_battery_icon_png.c  ui_img_design_sem_nome_png.c  ui_img_full_connection_png.c  ui_img_gb_png.c  ui_img_no_connection_png.c
ble_spp_client/main/ui/screens/: ui_Screen1.c  ui_detailed_home.c  ui_home_screen.c  ui_shutdown_screen.c  ui_splash_screen.c
squareline/: SquareLine_Project.sll  SquareLine_Project.spj
squareline/assets/: ui_font_bebas120.fcfg  ui_font_bebas200.c  ui_font_bebas200.fcfg  ui_font_bebas25.fcfg  ui_font_bebas30.fcfg  ui_font_bebas50.c  ui_font_bebas50.fcfg  ui_font_bebas75.c  ui_font_bebas75.fcfg  ui_font_bebas_14.fcfg  ui_font_bebas_medium.fcfg  ui_font_bebas_small.fcfg
squareline/examples/Medical/: Medical.sll  Medical.spj
squareline/examples/Medical/assets/fonts/: ui_font_Big_Number.fcfg
squareline/examples/Smart_Gadget/assets/: ui_font_bebas_120.c  ui_font_bebas_120.fcfg
squareline/examples/Smartwatch/: Smartwatch.sll  Smartwatch.spj
squareline/examples/Thermostat/: Thermostat.sll  Thermostat.spj
squareline/examples/Thermostat/assets/: ui_font_Number.fcfg
